fix(General): template logic for tests to complete

--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -6,6 +6,7 @@ graft tests
 include .coveragerc
 include .editorconfig
 include .pre-commit-config.yaml
+include .cookiecutterrc
 include tox.ini
 
 include AUTHORS.rst
