docs(General): add comment

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -64,6 +64,7 @@ commands =
     #sphinx-build {posargs:-E} -b doctest docs dist/docs
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
+    # for GitHub pages
     python3 -c 'open("dist/docs/.nojekyll","w")'
 
 [testenv:report]
