--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup git user
-        run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -40,7 +35,9 @@ jobs:
           cookiecutter --no-input .
           cd my-test-project
           # add a git repo which some checks expect
-          git init && git add -A && git commit --no-sign -m "Initial."
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git init && git branch -m main && git add -A && git commit --no-sign -m "Initial."
           # remove the link check which will not work here
           sed -i -e '/sphinx-build -b linkcheck/d' tox.ini
           tox
