--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
           # add a git repo which some checks expect
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git init && git branch -m main && git add -A && git commit --no-sign -m "Initial."
+          git init -b main && git add -A && git commit --no-sign -m "Initial."
           # remove the link check which will not work here
           sed -i -e '/sphinx-build -b linkcheck/d' tox.ini
           tox
