test(tox): generic Python env for projects

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -14,7 +14,7 @@ envlist =
     check,
     docs,
     #{py38,py39,py310,py311},
-    {py38},
+    py,  # generic Python3 with unspecified version using defaults
     report
 ignore_basepython_conflict = true
 
@@ -24,7 +24,7 @@ basepython =
     py39: {env:TOXPYTHON:python3.9}
     py310: {env:TOXPYTHON:python3.10}
     py311: {env:TOXPYTHON:python3.11}
-    {bootstrap,clean,build,check,report,docs}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,build,check,report,docs, py}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
