fix(tox): environment for cleaning build files added

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -75,6 +75,14 @@ commands =
     coverage report
     coverage html
 
+[testenv:clean]
+deps =
+    coverage
+skip_install = true
+commands =
+    rm -Rf {toxinidir}/src/*.egg-info dist build
+    coverage erase
+
 [flake8]
 max-line-length = 100
 extend-exclude =
