fix(tox): allow rm

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -80,9 +80,10 @@ commands =
 deps =
     coverage
 skip_install = true
+allowlist_externals=/bin/rm
 commands =
-    rm -Rf {toxinidir}/src/*.egg-info dist build
-    coverage erase
+    # coverage erase  # always fails
+    rm -Rf {toxinidir}/src/*.egg-info dist build htmlcov .coverage
 
 [flake8]
 max-line-length = 100
