fix(tox): allow rm (2)

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -80,7 +80,7 @@ commands =
 deps =
     coverage
 skip_install = true
-allowlist_externals=/bin/rm
+allowlist_externals=/bin/rm,/usr/bin/rm
 commands =
     # coverage erase  # always fails
     rm -Rf {toxinidir}/src/*.egg-info dist build htmlcov .coverage
