refactor(tox): move coverage config to tox.ini

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -85,6 +85,27 @@ commands =
     # coverage erase  # always fails
     rm -Rf {toxinidir}/src/*.egg-info dist build htmlcov .coverage
 
+# configuration for pytest-cov primarily on GitHub runners (hence the paths)
+[coverage:paths]
+src =
+   src
+   */{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/src
+tests =
+   tests
+   */{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/tests
+
+[coverage:run]
+branch = true
+source =
+    src/{{ cookiecutter.package_name }}
+    tests
+parallel = true
+
+[coverage:report]
+show_missing = true
+precision = 2
+omit = *migrations*
+
 [flake8]
 max-line-length = 100
 extend-exclude =
