tests(tox): move optional provided args to the end of pytest call
- allows to add args without having to repeat everything

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -39,7 +39,7 @@ package = wheel
 package_env = .pkg
 wheel_build_env = .pkg
 commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
+    pytest --cov --cov-report=term-missing -vv {posargs}
 
 [testenv:build]
 deps = build
