--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -39,7 +39,7 @@ package = wheel
 package_env = .pkg
 wheel_build_env = .pkg
 commands =
-    pytest --cov --cov-report=term-missing -vv {posargs}
+    pytest --cov=src --cov=tests --cov-report=term-missing -vv {posargs}
 
 [testenv:build]
 deps = build
