--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -138,4 +138,4 @@ testpaths =
     tests
 # Idea from: https://til.simonwillison.net/pytest/treat-warnings-as-errors
 filterwarnings =
-    ignore::DeprecationWarning:distutils|notebook|_pytest
+    ignore::DeprecationWarning:distutils|notebook|_pytest|debugpy|pkg_resources
