--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -1,18 +1,18 @@
 graft docs
+exclude docs/reference/autosummary/*
 graft src
 graft ci
 graft tests
 
-include .coveragerc
 include .editorconfig
 include .pre-commit-config.yaml
 include .cookiecutterrc
 include tox.ini
 
 include AUTHORS.rst
-include CHANGELOG.rst
+include CHANGELOG.md
 include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 
-global-exclude *.py[cod] __pycache__/* *.so *.dylib .DS_Store
+global-exclude *.py[cod] __pycache__/* *.so *.dylib .DS_Store */.ipynb_checkpoints/
