tests(Notebooks): tox config for testing jupyter notebooks

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -32,6 +32,7 @@ setenv =
 deps =
     pytest
     pytest-cov
+    pytest_notebook
     -r{toxinidir}/tests/requirements.txt
 usedevelop = false
 package = wheel
@@ -133,9 +134,22 @@ addopts =
     --doctest-modules
     --doctest-glob=\*.rst
     --tb=short
+    --ignore-glob=\*/.ipynb_checkpoints
 testpaths =
     src
     tests
+    notebooks
 # Idea from: https://til.simonwillison.net/pytest/treat-warnings-as-errors
 filterwarnings =
     ignore::DeprecationWarning:distutils|notebook|_pytest|debugpy|pkg_resources
+nb_test_files = True
+nb_coverage = False
+nb_post_processors =
+    coalesce_streams
+nb_diff_ignore =
+    /metadata/language_info
+    /cells/*/execution_count
+    /cells/*/outputs/*/execution_count
+    /cells/*/outputs/*/data/image/png
+#nb_diff_replace =
+#    '/cells/*/outputs/*/text' '\\' '/'
