--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -141,7 +141,7 @@ testpaths =
     notebooks
 # Idea from: https://til.simonwillison.net/pytest/treat-warnings-as-errors
 filterwarnings =
-    ignore::DeprecationWarning:distutils|notebook|_pytest|debugpy|pkg_resources
+    ignore::DeprecationWarning:distutils|notebook|_pytest|xarray|nbclient|pytest_notebook|debugpy|pkg_resources
 nb_test_files = True
 nb_coverage = False
 nb_post_processors =
