tests(coverage): fix for coverage error about line and arc data
- coverage config moved to bottom of tox.ini

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -40,7 +40,7 @@ package = wheel
 package_env = .pkg
 wheel_build_env = .pkg
 commands =
-    pytest --cov=src --cov=tests --cov-report=term-missing -vv {posargs}
+    pytest --cov-config=tox.ini --cov=src --cov=tests --cov-report=term-missing -vv {posargs}
 
 [testenv:build]
 deps = build
@@ -83,29 +83,8 @@ deps =
 skip_install = true
 allowlist_externals=/bin/rm,/usr/bin/rm
 commands =
-    # coverage erase  # always fails
-    rm -Rf {toxinidir}/src/*.egg-info dist build htmlcov .coverage
-
-# configuration for pytest-cov primarily on GitHub runners (hence the paths)
-[coverage:paths]
-src =
-   src
-   */{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/src
-tests =
-   tests
-   */{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/tests
-
-[coverage:run]
-branch = true
-source =
-    src/{{ cookiecutter.package_name }}
-    tests
-parallel = true
-
-[coverage:report]
-show_missing = true
-precision = 2
-omit = *migrations*
+    coverage erase
+    rm -Rf dist build htmlcov src/{{ cookiecutter.package_name }}.egg-info
 
 [flake8]
 max-line-length = 100
@@ -153,3 +132,24 @@ nb_diff_ignore =
     /cells/*/outputs/*/data/image/png
 #nb_diff_replace =
 #    '/cells/*/outputs/*/text' '\\' '/'
+
+# configuration for pytest-cov primarily on GitHub runners (hence the paths)
+[coverage:paths]
+src =
+   src
+   */{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/src
+tests =
+   tests
+   */{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/tests
+
+[coverage:run]
+branch = true
+source =
+    src/{{ cookiecutter.package_name }}
+    tests
+parallel = true
+
+[coverage:report]
+show_missing = true
+precision = 2
+omit = *migrations*
