--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/coverage.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/coverage.yml
@@ -2,9 +2,6 @@ name: Coverage
 
 # Controls when the action will run.
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
   workflow_call:
 
 {% import '.github/workflows/ci-cd.yml' as ci with context %}{# Use some Jinja macros -#}
@@ -76,11 +73,18 @@ jobs:
         run: |
           echo '### Total coverage: {{'${{ env.total }}'}}%' >> $GITHUB_STEP_SUMMARY
 
-      - name: Checkout reports branch
+      - name: Checkout documentation pages branch
         if: {{"${{ github.ref == 'refs/heads/main' }}"}}
         uses: actions/checkout@v3
         with:
           ref: gh-pages
+          path: pages
+
+      - name: Download previously generated documentation
+        if: {{"${{ github.ref == 'refs/heads/main' }}"}}
+        uses: actions/download-artifact@v3
+        with:
+          name: docs
           path: pages
 
       - name: Download coverage HTML report
