fix(manifest): ignore notebook checkpoints

--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -15,4 +15,4 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 
-global-exclude *.py[cod] __pycache__/* *.so *.dylib .DS_Store */.ipynb_checkpoints/
+global-exclude *.py[cod] __pycache__/* *.so *.dylib .DS_Store */.ipynb_checkpoints/*
