--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/docs.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/docs.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   docs:
-    # defining this job separately allows to refer to it later
-    # as job.needs dependency plus it provides a badge
+    # defining this job separately allows to refer to it later as job.needs dependency
     runs-on: ubuntu-latest
     steps:
 
