--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/tests.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/tests.yml
@@ -10,8 +10,7 @@ on:
 {% import '.github/workflows/ci-cd.yml' as ci %}{# Use some Jinja macros -#}
 
 jobs:
-  # defining this job separately allows to refer to it later
-  # as job.needs dependency plus it provides a badge
+  # defining this job separately allows to refer to it later as job.needs dependency
   tests:
     timeout-minutes: 30
     strategy:
