--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -80,6 +80,7 @@ version_variable = [                        # version location
 version_pattern = [
     "README.rst:v{version}.svg",
     "README.rst:v{version}...main",
+    ".cookiecutterrc:version:                   '{version}'",
 ]
 version_source = "tag"
 prerelease_tag = "dev"
