--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/coverage.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/coverage.yml
@@ -119,8 +119,9 @@ jobs:
           # Commit.
           cd ./pages
           rm {{'${{ env.report_dir }}/.gitignore'}}
-          ls -la {{'${{ env.report_dir }}'}} # for debugging
-          git add {{"${{ env.report_dir }}"}}/* "${REDIR_HTML#*/}" "${BADGE_JSON#*/}"
+          # ls -la {{'${{ env.report_dir }}'}} # for debugging
+          # {{"${{ env.report_dir }}"}}/* "${REDIR_HTML#*/}" "${BADGE_JSON#*/}"
+          git add -A
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git commit --file=../commit.txt
