fix(GitHub Action): Remove old doc files first before populating with newly generated docs

--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/coverage.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/coverage.yml
@@ -80,6 +80,9 @@ jobs:
           ref: gh-pages
           path: pages
 
+      - name: Purge old documentation files
+        run: cd pages && git rm -rf .
+
       - name: Download previously generated documentation
         if: {{"${{ github.ref == 'refs/heads/main' }}"}}
         uses: actions/download-artifact@v3
