style(general): set isort profile for black formatter

--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -93,6 +93,7 @@ line-length = 100
 preview = true
 
 [tool.isort]
+profile = "black"
 line_length = 100
 group_by_package = true
 known_first_party = "{{ cookiecutter.package_name }}"
