--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/build.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/build.yml
@@ -60,6 +60,6 @@ jobs:
 
       - name: Upload packages
         env:
-          TWINE_PASSWORD: {{'"${{ secrets.TEST_PYPI_TOKEN }}"'}}
+          TWINE_PASSWORD: {{'"${{ secrets.'+pypi_token+' }}"'}}
         run: |
-          twine upload -u __token__ -r testpypi dist/*.*
+          twine upload -u __token__ -r {{ pypi_repo }} dist/*.*
