fix(GitHub Action): Install additional system packages from optional file ci/requirements_<platform>

--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/tests.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/tests.yml
@@ -38,6 +38,8 @@ jobs:
 
       {{ ci.pip_install_req() }}
 
+      {{ ci.sys_install_req() }}
+
       - name: Show installed package details
         run: |
           virtualenv --version
