--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/ci-cd.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/ci-cd.yml
@@ -68,6 +68,19 @@ jobs:
           python -m pip install --progress-bar=off -r ci/requirements.txt
 {%- endmacro -%}
 
+{% macro sys_install_req() -%}
+      - name: Install required system packages
+        shell: sh
+        run: |
+          PLATFORM="$(echo "$RUNNER_OS" | tr '[:upper:]' '[:lower:]')"
+          REQFN="ci/requirements_$PLATFORM.txt"
+          if [ "$PLATFORM" = "linux" ] && [ -f "$REQFN" ]; then
+            sudo apt-get -y install $(sed -e '/^\s*#/d' "$REQFN")
+          else
+            echo "macro sys_install_req(): platform '$PLATFORM' not implemented yet."
+          fi
+{%- endmacro -%}
+
 {% macro set_version() -%}
       - name: Get latest tags
         run: |
