--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -16,3 +16,4 @@ include LICENSE
 include README.rst
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib .DS_Store */.ipynb_checkpoints/*
+recursive-include templates *.j2
