--- a/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/release.yml
+++ b/{{cookiecutter.repo_name}}/ci/templates/.github/workflows/release.yml
@@ -26,15 +26,14 @@ jobs:
       {{ ci.pip_install_req() }}
 
       - name: Determine a version number
+        env:
+          GH_TOKEN: {{'${{ secrets.GITHUB_TOKEN }}'}}
         shell: sh
         run: |
           set -x
+          NEWVER=$(semantic-release version --print)
+          sed -i -e "s/v\([0-9]\+\.\)\{3\}/v$NEWVER./" README.rst
+          sed -i -e "s/\([0-9]\+\.\)\{2\}[0-9]\+/$NEWVER/" .cookiecutterrc
+          git add README.rst .cookiecutterrc
           # creates a release only if there are relevant changes/commits starting with 'fix/feat()'
-          semantic-release publish -D version_source=commit \
-            -D commit_author="${GITHUB_ACTOR} <${GITHUB_ACTOR}@users.noreply.github.com>"
-          if [ -z "$(git tag --points-at HEAD)" ]; then
-            # no release, no relevant changes, make prerelease tag
-            semantic-release version -D version_source=tag --prerelease
-          fi
-          git push
-          git push --tags
+          semantic-release version
