fix(tox): ignore more DeprecationWarnings

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -121,7 +121,8 @@ testpaths =
     notebooks
 # Idea from: https://til.simonwillison.net/pytest/treat-warnings-as-errors
 filterwarnings =
-    ignore::DeprecationWarning:distutils|notebook|_pytest|xarray|nbclient|pytest_notebook|debugpy|pkg_resources
+    ignore::DeprecationWarning:distutils|notebook|_pytest|xarray|nbclient|pytest_notebook|debugpy
+    ignore::DeprecationWarning:pkg_resources|openpyxl|zmq
 nb_test_files = True
 nb_coverage = False
 nb_post_processors =
