fix(tox): locale/codepage fix on Windows for JuPy notebooks

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -30,6 +30,9 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
+    # fix wrong cp1252 on Windows when loading a notebook with dash (or other unicode symbols)
+    # since locale.getpreferredencoding can't be changed easily
+    PYTHONUTF8=1
 deps =
     pytest
     pytest-cov
