fix(tox): ignore warnings about unknown config options by missing pytest plugin

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -126,6 +126,8 @@ testpaths =
 filterwarnings =
     ignore::DeprecationWarning:distutils|notebook|_pytest|xarray|nbclient|pytest_notebook|debugpy
     ignore::DeprecationWarning:pkg_resources|openpyxl|zmq
+    # ignore warnings about unknown pytest-notebook options below
+    ignore::Warning:_pytest
 nb_test_files = True
 nb_coverage = False
 nb_post_processors =
