fix(licenses): SPDX specifier in pyproject.toml required

--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -2,24 +2,10 @@
 name = "{{ cookiecutter.distribution_name }}"
 description = {{ '{0!r}'.format(cookiecutter.project_short_description).lstrip('ub')|replace("'",'"') }}
 dynamic = ["version", "readme"]
-license = {text = "{{ cookiecutter.license }}"}
+license = "{{ cookiecutter.license }}"
 classifiers = [
   # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
   "Development Status :: 4 - Beta",
-{%- if cookiecutter.license == "no" %}
-{%- elif cookiecutter.license in ["BSD 2-Clause License", "BSD 3-Clause License"] %}
-  "License :: OSI Approved :: BSD License",
-{%- elif cookiecutter.license == "MIT license" %}
-  "License :: OSI Approved :: MIT License",
-{%- elif cookiecutter.license == "ISC license" %}
-  "License :: OSI Approved :: ISC License (ISCL)",
-{%- elif cookiecutter.license == "Apache License 2.0" %}
-  "License :: OSI Approved :: Apache Software License",
-{%- elif "GPLv3+" in cookiecutter.license %}
-  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
-{%- elif "LGPLv3+" in cookiecutter.license %}
-  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
-{%- endif %}
   "Operating System :: Unix",
   "Operating System :: POSIX",
   "Operating System :: MacOS",
